port: migrate mod to Forge 1.20.1